--- a/WebContent/css/sidebar.css
+++ b/WebContent/css/sidebar.css
@@ -37,3 +37,11 @@
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+
+.container-fluid{
+	width: 50%;
+}
+
+#myInput, #myTable {
+  display: none;
+}
